# pylabpraxis

./: .dockerignore  .gitignore  .gitmodules  .jupyterlite.doit.db  .pre-commit-config.yaml  404.html  AGENTS.md  API_TEST_DEBUG_SESSION_SUMMARY.md  CLAUDE.md  CONTEXT_TRANSFER.md  CONTRIBUTING.md  Dockerfile  E2E_STATUS.md  GEMINI.md  JULES_FACTORY_FIX.md  JULES_MODEL_TEST_GUIDE.md  JULES_NEXT_STEPS.md  LICENSE.md  Makefile  OVERVIEW.md  POST_SHIP.md  PRODUCTION_BUGS.md  README.md  REFACTORING_STRATEGY.md  REMEDIATION_PLAN.md  RESOLUTION_SUMMARY.md  ROADMAP.md  RUNWAY.md  STATE_MANAGEMENT.md  TECHNICAL_DEBT.md  TESTING_STRATEGY.md  TEST_COVERAGE_SUMMARY.md  TEST_STATUS_REPORT.md  VERIFICATION_REPORT.md  agent_history.jsonl  alembic.ini  ast_gen.py  chunk-2DLIB6QX.js  chunk-2ZVIT425.js  chunk-36S52DBG.js  (+244 more)
.agent/: 260129_JULES_STAGE1_PROMPTS.md  260129_PRAXIS_HANDOFF.md  AGENT_STATUS.json  DATA_VIZ_E2E_INVESTIGATION.md  DEVELOPMENT_MATRIX.md  E2E_FAILURES_AUDIT_260129.md  FINAL_MERGE_PLAN.md  HANDOVER_SUMMARY.md  NOTES.md  ORCHESTRATION.md  POST_MERGE_CHECKLIST.md  POST_SHIP_ROADMAP.md  README.md  ROADMAP.md  TECHNICAL_DEBT.md  agent.db.bak_migration_004  agent_tasks.jsonl  schema.sql  status.json
.agent/agents/: README.md  deep-researcher.md  designer.md  evolving-orchestrator.md  explorer.md  fixer.md  flash.md  general.md  investigator.md  librarian.md  multimodal-looker.md  oracle.md  recon.md  summarize.md
.agent/archive/: COMPRESSED_ARCHIVE.md  README.md  RUNWAY.md  UPDATE_ARCHIVE.md
.agent/backlog/: README.md  agentic_infrastructure.md  extensibility.md  hardware.md  protocol_heuristics.md  protocol_reliability.md  testing.md
.agent/codestyles/: README.md
.agent/pipelines/: README.md
.agent/prompts/: 260122_README.md  260122_asset_wizard_visual_tweaks.md  260122_e2e_test_infrastructure.md  260122_global_module_shimming.md  260122_hid_shim_implementation.md  260122_post_merge_cleanup.md  260122_protocol_runner_visual_tweaks.md  260122_socket_shim_research.md  260122_theme_css_variable_fixes.md  README.md  debug_browser_mode.md  maintenance_audit.md  orchestrator_v01alpha_merge.md
.agent/reference/: ui-guide.md
.agent/references/: README.md  alembic_migration_guide.md  hardware_testing_guide.md  machine_sim_audit.md  product.md  state_gap_analysis.md
.agent/reports/: README.md  asset_selection_analysis.md  backend_categories_investigation.md  component_audit_assets.md  component_audit_playground.md  connection_persistence_tests.md  css_audit_260109.md  css_theming_audit.md  dependency_audit.md  docs_404_investigation.md  extracted_browser_interrupt.md  extracted_geometry_heuristics.md  extracted_machine_registration.md  extracted_plr_audit.md  final_merge_handoff.md  frontend_backend_type_architecture.md  inventory_search_investigation.md  inventory_wizard_design_spec.md  inventory_wizard_recon.md  investigation_selective_transfer_params.md  io_transport_audit.md  jules_dispatch_recon_20260122.md  jules_handover_20260121.md  jules_integration_plan.md  jules_session_triage.md  machine_args_configuration_investigation.md  recon_asset_wizard_visual.md  (+34 more)
.agents/: ACTIVE_DEVELOPMENT.md  AGENTIC_WORKFLOW.md  BACKEND_STATUS.md  CONDUCTOR.md  CONTEXT_TRANSFER.md  DEVELOPMENT_MATRIX.md  FRONTEND_POLISH_PIPELINE.md  GEMINI_FRONTEND_PLAN.md  HANDOFF.md  HANDOFF_JULES.md  HANDOVER_SUMMARY.md  NEXT_STEPS.md  NOTES.md  PRIORITY_ANALYSIS.md  README.md  ROADMAP.md  TECHNICAL_DEBT.md  agent_tasks.jsonl  tasks_for_jules.json
.claude/: settings.local.json
.github/: copilot_instructions.md  dependabot.yml
alembic/: env.py
alembic_old/: env.py
conductor/: product-guidelines.md  tracks.md
deck_layouts  # Directory where user-selectable deck files are located/: test_deck.json
docs/: API_TESTING_PATTERNS.md  OPFS_OPTIMIZATION_SPEC.md  SERVICE_TESTING_PATTERNS.md  architecture.md  backend.api.rst  backend.commons.rst  backend.rst  backend.services.rst  conf.py  index.md  index.rst  installation.md  quickstart.md  state_management.md  testing.md
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
keycloak/: praxis-realm.json
praxis/: CODE_SMELLS_AUDIT.md  COMPLEXITY_AUDIT.md  DEAD_CODE_AUDIT.md  E2E_COVERAGE_AUDIT.md  E2E_FILE_AUDITS.md  FEATURE_ARCHITECTURE_AUDIT.md  SERVICE_LAYER_AUDIT.md  __init__.py  configure.py  main.py  praxis.ini  workcell.py
prerelease_dev_docs/: ARCHITECTURE.md  MODEL_ISSUES.md  OVERVIEW.md  STATE_MANAGEMENT.md  TESTING_STRATEGY.md
psql/: init.sql
pylabpraxis-angular/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
pylabpraxis_flutter/: pubspec.yaml
references/: machine_sim_audit.md  protocol_asset_audit.md  qa_interaction_checklist.md  resource_error_log.md  state_gap_analysis.md  styling_audit_report.md  suite_comprehensiveness_analysis.md  test_plan_v1.md  workcell_ui_audit.md
scripts/: check_browser_db.py  clear_redis_locks.py  create_test_tables.py  dev-frontend.sh  dispatch_jules_recons.sh  dispatch_recon_tasks.sh  extract_capabilities.py  fetch_jules_diffs.sh  fix_orm_references.py  generate_browser_db.py  generate_browser_schema.py  generate_openapi.py  generate_plr_definitions.py  init_keycloak.py  mark_slow_tests.py  patch_jupyterlite_config.py  port_docstrings.py  review_jules_sessions.sh  run_tests.sh  seed_direct.py  seed_resources.py  simulate-ghpages.sh  test-with-db.sh  test_auth.py  verify_backend_integrity.py  verify_websocket.py
static/: index.html  script.js  style.css
tests/: README.md  TESTING_PATTERNS.md  asset_manager_tests.py  asset_manager_tests.py.bak  conftest.py  factories.py  factories_schedule.py  helpers.py  integration_discovery_execution_tests.py  orchestrator_tests.py  praxis_state_tests.py  protocol_core_tests.py  shim_verification_test.py  state_tests.py  test_asset_manager.py  test_deck_diagnostic.py  test_deck_serialization.py  test_discovery_service.py  test_integration_discovery_execution.py  test_orchestrator.py  test_praxis_state.py  verify_frontend_ui.py  verify_pickle.py  workcell_runtime_tests.py
(+3123 files in other folders)
